ErrLogs/1alarm.py.err.log
  File "/home/robot/RoboAlarm/alarm.py", line 52
    return f"{self.target_time} | {self.siren.name} | {self.challenge_amount} Challenges"
                                                                                        ^
SyntaxError: invalid syntax
